[package]
name = "relay-sim-reth"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[dependencies]
alloy-consensus = { version = "1.0.7", default-features = false}
alloy-eips = { version = "1.0.7", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false, features = ["core-net"] }
alloy-rpc-types-beacon = { version = "1.0.7", default-features = false }
alloy-rpc-types-engine = { version = "1.0.7", default-features = false }
anyhow = "1.0.96"
async-trait = "0.1.68"
bytes = "1.10.0"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1.0"
derive_more = { version = "2", default-features = false, features = ["full"] }
ethers = "2.0.14"
eyre = "0.6.12"
futures = "0.3.31"
jsonrpsee = {  version = "0.25.1", features = ["client", "server", "macros"] }
metrics = "0.24.0"
metrics-derive = "0.1"
metrics-exporter-prometheus = { version = "0.16.0", default-features = false }
metrics-process = "2.1.0"
metrics-util = { default-features = false, version = "0.19.0" }
parking_lot = "0.12.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag="v1.4.3"}
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag="v1.4.3", features = ["full", "cli"] }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag="v1.4.3"}
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag="v1.4.3"}
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag="v1.4.3"}
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag="v1.4.3"}
reth-metrics = { git = "https://github.com/paradigmxyz/reth", tag="v1.4.3"}
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag="v1.4.3"}
serde = "1.0.218"
serde_with  = "1.14"
thiserror = { version = "2.0.0", default-features = false }
tracing = "0.1.41"
tokio = {  version = "1.43.0", features = ["full"] }
rand = "0.9"
revm = { version = "23.1.0", default-features = false }
revm-primitives = { version = "19.0.0", default-features = false }
serde_json = "1.0.140"

[patch.crates-io]
# alloy-consensus = { git = "https://github.com/alloy-rs/alloy", branch = "main" }