[package]
name = "relay-sim-reth"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
alloy-consensus = { version = "1.0.37", default-features = false}
alloy-eips = { version = "1.0.37", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false, features = ["core-net"] }
alloy-rpc-types-beacon = { version = "1.0.37", default-features = false }
alloy-rpc-types-engine = { version = "1.0.37", default-features = false }
alloy-signer  = { version = "1.0.37" }
alloy-signer-local  = { version = "1.0.37" }
alloy-sol-types = { version = "1.3.1", default-features = false }
async-trait = "0.1.68"
bytes = "1.10.0"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1.0"
derive_more = { version = "2", default-features = false, features = ["full"] }
futures = "0.3.31"
jsonrpsee = {  version = "0.26.0", features = ["server", "macros"] }
metrics = "0.24.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag="v1.8.2"}
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag="v1.8.2", features = ["full", "cli"] }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag="v1.8.2"}
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag="v1.8.2"}
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag="v1.8.2"}
reth-metrics = { git = "https://github.com/paradigmxyz/reth", tag="v1.8.2"}
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag="v1.8.2"}
revm = { version = "29.0.1", default-features = false }
revm-primitives = { version = "20.2.1", default-features = false }
serde = "1.0.218"
serde_json = "1.0.140"
serde_with  = "1.14"
thiserror = { version = "2.0.0", default-features = false }
tracing = "0.1.41"
tokio = {  version = "1.44.2", features = ["full"] }
